--- a/content/post/2019-08-24.md
+++ b/content/post/2019-08-24.md
@@ -4,7 +4,7 @@ title:      "Welcome to RuBisCO Blog"
 subtitle:   ""
 date:       2019-08-24
 author:     "RuBisCO"
-URL: "/2019/08/24/hello-world/"
+URL: "/2019/08/24"
 image:      "img/home-bg-water2.jpg"
 ---
 
