--- a/content/post/2019-09-07.md
+++ b/content/post/2019-09-07.md
@@ -130,11 +130,7 @@ if __name__ == "__main__":
             continue
 
         cv2.imshow("frame", frame)
-
-        cv2.imwrite("/dev/shm/frame.png", frame)
-
-        image = '/dev/shm/frame.png'
-        data = decode(Image.open(image))
+        data = decode(frame)
 
         if data != []:
             code = data[0][0].decode('utf-8', 'ignore')
@@ -148,7 +144,7 @@ if __name__ == "__main__":
     cv2.destroyAllWindows()
 ```
 
-カメラ起動後、画像ファイル(/dev/shm/frame.png)に一度変換し、QRコードをデコードして文字表示を行っています。  
+カメラ起動後、frameにQRコードが映った時、デコードして文字表示を行っています。  
 動画は貼れませんでしたが、うまくいっているようです。
 
 ![qr1](/img/qr/3.png)
