--- a/content/post/2019-09-22.md
+++ b/content/post/2019-09-22.md
@@ -1,6 +1,6 @@
 ---
 layout:     post 
-title:      "irisデータに魅せられて Part1"
+title:      "irisデータに魅せられて"
 subtitle:   ""
 date:       2019-09-22T03:05:53+09:00
 author:     "RuBisCO"
@@ -11,7 +11,7 @@ image:      "img/home-bg-water2.jpg"
 # はじめに
 ここ数年「AI」という単語を耳にタコができるぐらい聞いて、結局なんのことか本質を掴めず、  
 このままだと「なんかデータをいっぱい突っ込めばいい感じにやってくれる」という間違った認識に飲み込まれそうなので、  
-今回は「データを観る」という原点に立ち返り、irisデータを使って機械学習の一端に触れてみます。
+今回は「データを観る」という原点に立ち返り、irisデータを使ってデータ予測の一端に触れてみます。
 
 # データセット
 今回扱う下記アヤメ(iris)データは、“versicolor”, “setosa”, “virginica” という 3 種類の品種のアヤメのがく片 (Sepal)、花弁 (Petal) の幅および長さを計測したデータです。  
@@ -139,4 +139,3 @@ plt.show()
 #  最後に一言
 今回機械学習には触れていませんが、データを可視化するだけでもある程度目星をつけることができました。  
 もちろん元のデータが良いというのもありますが、色々な角度からデータを見ることで新たな発見だったり、モデルを作りにしても 精度向上につながったりということがあるのでとても重要な作業です。  
-次回はこのirisデータを使って機械学習の流れを追っていきたいと思います。
