--- a/content/post/2019-09-07.md
+++ b/content/post/2019-09-07.md
@@ -8,13 +8,13 @@ URL: "/2019/09/07/"
 image:      "img/home-bg-water2.jpg"
 ---
 
-# はじめに
+## はじめに
 アプリを作ると必ずといっていいほど発生する動作テスト。  
 あらゆるデバイスで試さなければいけないので、複数人でテストした場合、誰がどのデバイスを借りているのかを把握したいと思うことがよくあります。  
 できることなら使用しているユーザーとデバイス、さらに借りた時間をひも付けて、いつでも参照できるようにしておきたい。  
 ということでQRコードを使用したラズパイによるデバイス管理システムを作っていきます。
 
-# 想定シナリオと改善ポイント
+## 想定シナリオと改善ポイント
 以前は、デバイスは1つのところで管理され、借りる時に紙に使用しているユーザーとデバイス、さらに借りた時間を記載し、使用開始。  
 使用後は返却時間を記載し、元の場所に戻すフローでした。  
 これをカメラにQRをかざし、貸出/返却を記録する下記フローに変更します。  
@@ -23,19 +23,19 @@ image:      "img/home-bg-water2.jpg"
 ```
 あわせて現在の状況もモニターで表示します。  
 
-# 用意するもの
+## 用意するもの
 ```
 Rasberry Pi 3 MODEL B (OS Rasbian)
 USBカメラ
 QRコード（ユーザー用とデバイス用）
 ```
 
-# システムフロー
+## システムフロー
 プログラムを書きながら考えていきたいですが、まずはシステムフローを書き出してみます。
 
 ![qr1](/img/qr/1.jpg)
 
-# データベース作成
+## データベース作成
 次にユーザー情報を管理するDBと貸出/返却を記録するためのDBの二つを用意します。
 下記はテスト用にデータを埋めた例です。
 
@@ -72,7 +72,7 @@ $ python3 create_db.py
 (3, 3, 'saburo')
 ```
 
-# QRコード作成
+## QRコード作成
 QRコードを作成してみましょう。今回はqrencodeコマンドを使います。  
 ```
 $ sudo apt-get install qrencode
@@ -83,7 +83,7 @@ qrencode -o 789.png "deviceid:789"
 ```
 
 
-# カメラ読み取り
+## カメラ読み取り
 まず、Rasberry Piの設定からカメラを有効にします。
 
 ![qr1](/img/qr/2.png)
@@ -149,7 +149,7 @@ if __name__ == "__main__":
 
 ![qr1](/img/qr/3.png)
 
-# 貸出返却処理
+## 貸出返却処理
 最後に、先ほど描いたユーザーフローに沿って貸出返却処理を実装していきます。
 
 <script src="https://gist.github.com/RuBisCO28/5f1a10a650dfffa3e27f9a879757b351.js"></script>
@@ -198,12 +198,12 @@ if not os.path.exists('lock'):
 ただしこのままだとロックがかかったままなので、5秒後にロックを解除します。  
 5秒間にした理由は、その間に次のものをかざすため、読み込まれたQRコードをカメラからいったん外すだろうという推測のものです。  
 
-#  動作テスト
+##  動作テスト
 最初にデバイスIDをかざし、ユーザーIDをかざすよういわれ、ユーザーIDをかざした後、デバイスIDをかざすことでデバイスを借りてます。（返却も同様）  
 動画は貼れませんでしたが、Lock、Unclockもうまく機能しているようです。
 
 ![qr1](/img/qr/4.png)
 
-#  最後に一言
+##  最後に一言
 ユーザーがログアウトをし忘れるとなりすましでデバイスを借りることができてしまうので、  
 これといった操作がなければ自動ログアウトできる機能を、次回は実装していく予定です。
