--- a/content/post/2019-09-22.md
+++ b/content/post/2019-09-22.md
@@ -8,12 +8,12 @@ URL: "/2019/09/22/"
 image:      "img/home-bg-water2.jpg"
 ---
 
-# はじめに
+## はじめに
 ここ数年「AI」という単語を耳にタコができるぐらい聞いて、結局なんのことか本質を掴めず、  
 このままだと「なんかデータをいっぱい突っ込めばいい感じにやってくれる」という間違った認識に飲み込まれそうなので、  
 今回は「データを観る」という原点に立ち返り、irisデータを使ってデータ予測の一端に触れてみます。
 
-# データセット
+## データセット
 今回扱う下記アヤメ(iris)データは、“versicolor”, “setosa”, “virginica” という 3 種類の品種のアヤメのがく片 (Sepal)、花弁 (Petal) の幅および長さを計測したデータです。  
 ただし元のデータの中から3つほどデータを選び、「Iris-unknown」として、格納しています。
 
@@ -34,7 +34,7 @@ species                 品種
 
 ![1](/img/iris/1.png)
 
-# お題
+## お題
 さて今回のお題は、このirisデータを使って下記3つのデータが3種類のどの品種に当たるかの分類をやってみます。  
 前述の通り、品種の部分はあとで答え合わせのために「Iris-unknown」として伏せておきます。
 
@@ -44,11 +44,11 @@ species                 品種
 6.8,3.0,5.5,2.1,Iris-unknown
 ```
 
-# 分類方法
+## 分類方法
 さてどのように分類をしていきましょう。
 色々とやり方はあると思いますが、今回はテーマである「データを観る」に沿ってまずは「Iris-unknown」を含めたデータを見ていきます。
 
-# 各変数ごとの分布の違い
+## 各変数ごとの分布の違い
 まずは、各変数ごとに分布の違いがないか見ていきます。  
 また各分布の中で「Iris-unknown」がどこに位置するかも合わせて見ていきます。
 
@@ -101,7 +101,7 @@ plt.show()
 データの各変数の分布具合は見えました。  
 iris-setosaがほかの2種と分布が離れているように見えますが、予測するにはまだ不十分なため、もう少し詳しく見ていきます。
 
-# 2変数の組み合わせによる分布の違い
+## 2変数の組み合わせによる分布の違い
 さきほどは各変数ごとに見ていきましたが、今回は2変数の組み合わせで散布図を作成し、分布傾向を見ていきます。
 
 ```
@@ -127,7 +127,7 @@ plt.show()
 6.8,3.0,5.5,2.1,Iris-virginica
 ```
 
-# 正解
+## 正解
 正解は下記になります。
 今回新しいデータではなく元のデータから選んだので、無作為に選んだとはいいがたいですが、分布図からある程度予測ができることが分かりました。
 ```
@@ -136,6 +136,6 @@ plt.show()
 6.8,3.0,5.5,2.1,Iris-virginica
 ```
 
-#  最後に一言
+##  最後に一言
 今回機械学習には触れていませんが、データを可視化するだけでもある程度目星をつけることができました。  
 もちろん元のデータが良いというのもありますが、色々な角度からデータを見ることで新たな発見だったり、モデルを作りにしても 精度向上につながったりということがあるのでとても重要な作業です。  
