--- a/content/post/2020-05-02.md
+++ b/content/post/2020-05-02.md
@@ -8,7 +8,7 @@ URL: "/2020/05/02/"
 image:      "img/home-bg-water2.jpg"
 ---
 
-# はじめに
+## はじめに
 データサイエンスを学びつつ、Pythonでのデータ処理方法を学びたいということで  
 Data Campの「Data Scientist with Python」を受講していきます。  
 https://www.datacamp.com/  
@@ -234,7 +234,7 @@ methodを適用して平均や中央値なども計算することもできる
 8.0
 ```
 
-#  最後に一言
+##  最後に一言
 基本的にどのプログラミング言語でも基礎の部分は一緒だけど、  
 ライブラリなどが出てくると使いこなせれば便利な反面、いろいろそのライブラリ特有の型やメソッドがあったりするので  
 いろいろ覚える必要がありそう。それにしてもnumpyでの演算は高速。。。
