--- a/content/post/2020-06-03.md
+++ b/content/post/2020-06-03.md
@@ -8,13 +8,13 @@ URL: "/2020/06/03/"
 image:      "img/home-bg-water2.jpg"
 ---
 
-# はじめに
+## はじめに
 最近FXのデモトレードができるアプリ「FXなび」で何回か取引をしていく中で、  
 資金管理と投資ルールが重要だなと感じたので、ナウザー・バルサラという数学者が、  
 破産確立について考えたトレードルールの安全性と期待値の高さが分かる表について  
 今回はデモトレードのデータも交えて紹介します。　
 
-# データセット
+## データセット
 今回扱う下記データは、計62回に渡ってデモトレードしたときの損益データ(手入力)です。  
 
 https://github.com/RuBisCO28/Balsara/blob/master/trade.csv
@@ -29,7 +29,7 @@ order        取引順番
 profit(円)   損益(マイナスは損)
 ```
 
-# 破産確率
+## 破産確率
 下記3つの数値(勝率、損益率、リスクにさらす資金比率)から、トレードを続けたときの破産確率をバルサラの破産確率表と合わせて導き出します。  
 なお、口座資金は1325153円と仮定します。
 
@@ -62,7 +62,7 @@ print("リスク資金比率: " + str(risk_rate*100) + "%")
 
 ![2](/img/balusara/table.png)
 
-# バルサラの破産確率表の導出方法
+## バルサラの破産確率表の導出方法
 さて破産確率0%なので安心。。。とはなりません。  
 そもそもこの表どこから出てきたのか、そして必ずしも同じリスク比率でトレードするとは限らないなど疑問が出てくるはず。
 そこで実際にこの表を作成していきます。  
@@ -191,7 +191,7 @@ if __name__ == '__main__':
         incomePercent += incomeInterval
 ```
 
-#  最後に一言
+##  最後に一言
 さて、バルサラの破産確率の導き出しから、定額での破産確率を表にまとめたものだということがわかりました。  
 FXなびのデモトレードは、Lvがあがらないとlot数が増やせないやスプレッドなどがあるLvまでないなどあるので、
 実際の取引データとは言い難く、また実際のトレードでも必ずしも同じリスク比率でトレードするとは限らないです。  
