--- a/content/post/2019-09-14.md
+++ b/content/post/2019-09-14.md
@@ -8,11 +8,11 @@ URL: "/2019/09/14/"
 image:      "img/home-bg-water2.jpg"
 ---
 
-# はじめに
+## はじめに
 前回の続き。  
 カメラでのQR読み込みは完了したので、次はこれといった操作がなければ自動ログアウトできる機能を、実装していきます。
 
-# ログイン/ログアウト
+## ログイン/ログアウト
 まずログイン時にログインユーザーの名前を記載した、login_userというファイルを生成することにします。  
 ログアウト時は、login_userというファイルを削除します。  
 また今回は、後ほどブラウザ上で貸出返却の状態を確認したり、デバイスの追加削除などをできるようにするため、
@@ -34,7 +34,7 @@ def logout_user(user_name):
     os.remove('login_user')
 ```
 
-# 自動ログアウトのためのタイマー実装
+## 自動ログアウトのためのタイマー実装
 さて、カードキーをかざして使用するコピー機を使ったことがある方は想像できるかもしれませんが、
 特に動作がなかった時、ある一定時間経つと自動でログアウトします。  
 今回は、下記のようにログイン時にloggerというファイルを作成しておき、タイマーを設定します。  
@@ -74,7 +74,7 @@ def auto_log(target_time):
 つまり、loggerは自動ログアウトするかの判定ファイル、timeupはタイマーのカウントが終了したことを示すファイルとしました。  
 実装の仕方としては、前回のロックアンロックと同じ、threadを使用して、タイマーを実装しました。
 
-# 自動ログアウト回避の条件と実装
+## 自動ログアウト回避の条件と実装
 次に、自動ログアウト回避の条件として、下記を設定しました。
 ```
 貸出返却操作があった
@@ -135,7 +135,7 @@ if os.path.exists('timeup'):
         auto_log(10)
 ```
 
-# タイマーカウント中のログアウト
+## タイマーカウント中のログアウト
 さて、今回実装で一番悩んだのは、タイマーカウント中にログインIDをかざしてログアウトした場合、タイマーをリセットする必要があるけれど、どう実装するか。  
 今回はthreadでタイマーを実装しているので、実行されているthreadを止める方法をググったところ、どうやらboolで止めればよいらしい。  
 下記を参考にstopというbool変数で制御しました。
@@ -170,7 +170,7 @@ lf = 0
 lock_unlock()
 ```
 
-#  動作テスト
+##  動作テスト
 最初にziroのユーザーIDをかざした後、60秒のカウントがはじまります。  
 その後、デバイスを借り、再度ziroのユーザーIDをかざしてマニュアルログアウトしてます。
 
@@ -183,11 +183,11 @@ lock_unlock()
 
 動画は貼れませんでしたが、うまく機能しているようです。
 
-#  コード
+##  コード
 ここまでのコードは下記にあげてます。ご参考ください。
 
 Github : https://github.com/RuBisCO28/QR_Reader
 
-#  最後に一言
+##  最後に一言
 threadは便利な反面、奥が深そうです。
 次回はブラウザで貸出状況を確認できる機能を、実装していく予定です。
