--- a/content/post/2019-09-21.md
+++ b/content/post/2019-09-21.md
@@ -8,10 +8,10 @@ URL: "/2019/09/21/"
 image:      "img/home-bg-water2.jpg"
 ---
 
-# はじめに
+## はじめに
 前回に引き続き、Web周りを実装していきます。
 
-# おさらい（ルーティング）
+## おさらい（ルーティング）
 デバイス一覧表示は実装終えたので、他のルーティングを実装していきます。
 
 ```
@@ -30,7 +30,7 @@ POST /users - ユーザー新規登録
 DELETE /devices/{id} - ユーザー削除
 ```
 
-# デバイス新規登録用フォームの表示とデバイス新規登録
+## デバイス新規登録用フォームの表示とデバイス新規登録
 デバイス一覧を表示するためのルーティングとほぼ同じくDBファイルにSQLで入力データをinsertします。
 
 ```php
@@ -59,7 +59,7 @@ phpの変数に代入して、SQLを発行してます。
 
 ![qr9](/img/qr/9.png)
 
-# 貸出返却ログ表示
+## 貸出返却ログ表示
 デバイスごとに貸出返却ログをlogディレクトリ配下にcsvファイルとして配置しているので、  
 このcsvファイルを参照して表示します。
 
@@ -95,7 +95,7 @@ $app->get('/devices/{id}', function (Request $request, Response $response, array
 
 ![qr10](/img/qr/10.png)
 
-# デバイス情報編集用フォームの表示とデバイス名更新
+## デバイス情報編集用フォームの表示とデバイス名更新
 
 ```php
 // 編集用フォームの表示
@@ -131,7 +131,7 @@ $app->put('/devices/{id}', function (Request $request, Response $response, array
 ```
 Slim の場合は、 "_METHOD" というフォームデータを送って対応します。
 
-# デバイス削除用フォームの表示とデバイスの削除
+## デバイス削除用フォームの表示とデバイスの削除
 
 ```php
 // デバイス削除フォーム
@@ -168,10 +168,10 @@ $app->delete('/devices/{id}', function (Request $request, Response $response, ar
 ![qr11](/img/qr/11.png)
 
 
-# ユーザー系のルーティング
+## ユーザー系のルーティング
 デバイス系と実装がかぶるので説明省略。  
 
-# ページ閲覧制限
+## ページ閲覧制限
 ユーザーやデバイスの編集などadmin権限をもつ人だけに権限を付与したい場合、  
 ページに閲覧権限をかけることができる。
 具体的には、下記クラスをroute.phpに記載し、
@@ -207,7 +207,7 @@ $app->get('/devices/create', function (Request $request, Response $response) {
 ![qr12](/img/qr/12.png)
 
 
-# Demo
+## Demo
 さてadmin用のQRコードを生成し（今回はadminのユーザーIDが4）、
 
 ```
@@ -237,6 +237,6 @@ $ ./device_manage.py
 
 ![qr13](/img/qr/13.png)
 
-#  最後に一言
+##  最後に一言
 Web周りが長くなってしまいましたが、一旦これにて完了です。  
 次回は最後ということで、起動用GUIと鍵の開け閉めをモーターで制御する部分を実装していく予定です。
