--- a/content/post/2020-06-06.md
+++ b/content/post/2020-06-06.md
@@ -1,6 +1,6 @@
 ---
 layout:     post 
-title:      "財務分析 Part1"
+title:      "GCP無料枠で作る財務&株価分析アプリ Part1"
 subtitle:   ""
 date:       2020-06-06T02:05:21+09:00
 author:     "RuBisCO"
@@ -9,53 +9,69 @@ image:      "img/home-bg-water2.jpg"
 ---
 
 # はじめに
-コロナショックで消費が落ち込んでいる記事を見かけた。(日経平均は爆上げ。。。)  
-そんな不況の中、企業の決算や株価がどうなっているのか気になったので、  
-改めて決算書による財務分析について何回かに分けて学んでみる。
+Always Freeプロダクトと呼ばれる一部のGCPサービスで制限はあるものの常時無料で使用できる(太っ腹)枠があるので、  
+この枠を使用し、決算書による財務分析&株価分析Webアプリを作ってみる。
 
-## 決算書
-決算書はどのくらい儲けが出たのかそれとも損失が出たのか(成績)と、  
-会社が今現在どのような財政状態にあるのか(健康状態)といった会社の状況を報告するための書類となる。  
-決算期は会社により異なるが、4/1(期首) - 3/31(期末)の1年間を区切りとしている。
+## 動機
+このコロナ禍もあってか株をはじめた人が増えたらしい（私もそのうちの一人）。  
+とはいえなんとなく買っているのもあるので、情報を集約して見れるサイトがそろそろ欲しいなぁ  
+ということで作成してみました。
 
-## ステークホルダー(利害関係者)
-なぜ決算書が必要になるのか、それは企業の成績によって利害を受けるステークホルダーにとって必要な情報源となるため。  
-ステークホルダーの一覧と各々求めているものについては下記となる
+## 今回実装する機能
+株を買う前にそもそもどういう企業なのかからはじまり、現在の株価やトレンドなどを見たいので下記情報を実装
 
 ```
-経営者: 会社の経営に無駄がないか
-従業員: 自分の働く会社に将来性があるか(給料あがる)
-出資者(株主) : この会社に投資して儲けられるか
-債権者(銀行etc) : この会社にお金を貸して返してもらえるか
-取引先 : ここと仕事して大丈夫か
-顧客: 今後もここの商品買いたい/買いたくない
+企業概要
+財務三表
+株価推移
+Googleトレンド
 ```
 
-## 決算書の入手場所
-速報としては決算短信(投資家向けのIRやTDnetから閲覧可能)、  
-確報としては有価証券報告書(金融庁が運営するedinetから閲覧可能)で入手可能
+## Always Freeプロダクトと構成
+Webアプリを作るにあたって下記Always Freeプロダクト対象サービスを確認すると  
+https://cloud.google.com/free?hl=ja  
 
-## 決算書の基本
-決算書は主に下記の３つのパートからなる
-このことから財務三表ともいう。これらの表より、企業の収益性、安全性、成長性を把握することができる
-
+使用できそうなのは下記4つ
 ```
-1. 損益計算書(P/L) : 人でいうと運動成績表
-利益のために会社がどれだけ動いて動きに無駄がないかといったことも読み取れる
-売上(運動量) - 費用(動き) = 利益(進んだ距離・成果)
+Google Compute Engine(GCE)
+Google App Engine(GAE)
+Cloud DataStore
+Cloud Storage
 ```
 
-```
-2. 貸借対照表(B/L) : 人でいうと健康診断表
-財産(現金や原材料、土地、建物などの資産額)と元手(銀行からの入借金や資本金など)が記されている
-資産(体つき) = 負債(体を支える借り物の骨格) + 純資産(体を支える自分の骨格)
-```
+無料で使う上での気にすべき具体的な制約は下記
 
 ```
-3. キャッシュフロー計算書(C/S) : 人でいうと血流検査表
-現金の出入りを営業(商品やサービスを仕入れたり売ったりした活動)、
-投資(工場や設備の拡大や縮小にかかる活動)、財務(銀行にお金を借りたり返したり)の３つの活動に分けて把握
+> GCE
+f1-micro インスタンス（1 か月あたり、北バージニア [us-east4] を除く米国リージョンのみ）
+30 GB-月の HDD
+5 GB-月のスナップショット（一部のリージョン）
+1 GB の北米から全リージョン宛ての下り（外向き）ネットワーク（1 か月あたり、中国とオーストラリアを除く）
+
+> GAE
+1 日あたり28 時間分の「F」インスタンス
+1 日あたり下り1GB
+スタンダード環境の場合のみ、この無料の使用量上限をご利用になれます。
+
+> Cloud DataStore
+1GB のストレージ
+1日あたり 50,000 回の読み取りオペレーション、20,000 回の書き込みオペレーション、20,000 回の削除オペレーション
+
+> Cloud Storage
+5 GB-月の Regional Storage（1 か月あたり、北バージニア [us-east4] を除く米国リージョンのみ）
+5,000 回のクラス A オペレーション（1 か月あたり）
+50,000 回のクラス B オペレーション（1 か月あたり）
+1 GB の北米から全リージョン宛ての下り（外向き）ネットワーク（1 か月あたり、中国とオーストラリアを除く）
 ```
+
+このため、必然的にリージョンは北米かつゾーンは日本に近いwestを指定
+システムフローとしては、GAEでフロント兼バックエンドをこなし、DBとしてはDataStoreとStorageを採用
+DBの定期的な更新はGCEで行うという下記フローに決定
+
+![feye6](/img/feye/feye.png)
+
+DB周りは本当はCloudSQLを使いたいが、無料ではない。NoSQLのCloud DataStoreが無料枠に入っているが、
+実は組み込みindexなるものが自動で生成され、容量をくうという罠があり、Cloud Storageも併用という流れになった。
 
 #  最後に一言
-今回は概要だけというところで次回から各財務三表について詳しく見ていきます。
+今回は概要だけというところで次回から実装する機能それぞれについて詳しく見ていきます。
