--- a/content/post/2020-06-06.md
+++ b/content/post/2020-06-06.md
@@ -9,8 +9,8 @@ image:      "img/home-bg-water2.jpg"
 ---
 
 # はじめに
-Always Freeプロダクトと呼ばれる一部のGCPサービスで制限はあるものの常時無料で使用できる(太っ腹)枠があるので、  
-この枠を使用し、決算書による財務分析&株価分析Webアプリを作ってみる。
+Always Freeプロダクトと呼ばれる一部のGCPサービスで制限はあるものの  
+常時無料で使用できる(太っ腹)枠があるので、この枠を使用し、決算書による財務分析&株価分析Webアプリを作ってみる。
 
 ## 動機
 このコロナ禍もあってか株をはじめた人が増えたらしい（私もそのうちの一人）。  
@@ -64,14 +64,15 @@ f1-micro インスタンス（1 か月あたり、北バージニア [us-east4] 
 1 GB の北米から全リージョン宛ての下り（外向き）ネットワーク（1 か月あたり、中国とオーストラリアを除く）
 ```
 
-このため、必然的にリージョンは北米かつゾーンは日本に近いwestを指定
-システムフローとしては、GAEでフロント兼バックエンドをこなし、DBとしてはDataStoreとStorageを採用
+このため、必然的にリージョンは北米かつゾーンは日本に近いwestを指定  
+システムフローとしては、GAEでフロント兼バックエンドをこなし、DBとしてはDataStoreとStorageを採用  
 DBの定期的な更新はGCEで行うという下記フローに決定
 
 ![feye6](/img/feye/feye.png)
 
-DB周りは本当はCloudSQLを使いたいが、無料ではない。NoSQLのCloud DataStoreが無料枠に入っているが、
-実は組み込みindexなるものが自動で生成され、容量をくうという罠があり、Cloud Storageも併用という流れになった。
+DB周りは本当はCloudSQLを使いたいが、無料ではない。  
+NoSQLのCloud DataStoreが無料枠に入っているが、実は組み込みindexなるものが自動で生成され、  
+容量をくうという罠があり、Cloud Storageも併用という流れになった。
 
 #  最後に一言
 今回は概要だけというところで次回から実装する機能それぞれについて詳しく見ていきます。
