--- a/content/post/2020-07-13.md
+++ b/content/post/2020-07-13.md
@@ -4,7 +4,7 @@ title:      "GCP無料枠で作る財務&株価分析アプリ Part2"
 subtitle:   ""
 date:       2020-07-13T02:05:21+09:00
 author:     "RuBisCO"
-URL: "/2020/06/13/"
+URL: "/2020/07/13/"
 image:      "img/home-bg-water2.jpg"
 ---
 
@@ -505,6 +505,11 @@ def get_stocks(code):
 ![index](/img/feye/index.PNG)
 
 そして超過分だけ、毎月課金されるので、データ容量を減らすなど注意が必要です。
+
+## Code
+恒例のGithubにサンプル公開。
+
+https://github.com/RuBisCO28/StockVoice
 
 #  最後に一言
 1GBのストレージ制限があるので、次章で説明するCloud Storageの方を使えばよかったなと思いつつ、DataStoreを使う勉強になったのでヨシとしたいと思います。
